module(
    name = "boost_certify",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.2")

bazel_dep(name = "grpc", version = "1.70.1")

bazel_dep(name = "boost.asio", version = "1.89.0.bcr.1")
bazel_dep(name = "boost.beast", version = "1.89.0.bcr.1")
bazel_dep(name = "boost.filesystem", version = "1.89.0.bcr.1")
